fixed position on ios

--- a/static/scss/page.form.btmbtn.scss
+++ b/static/scss/page.form.btmbtn.scss
@@ -56,3 +56,9 @@
     
     
 }
+
+
+
+.ui-form-btmbtn-hidden {
+    display: none;
+}
